--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 </head>
 <body>
     <div class="container">
-        <h2>Task Manager</h2>
+        <h2>Balance Buddy</h2>
         <form id="taskForm">
             <div class="form-row align-items-center">
                 <div class="col-auto">
